--- a/hornoftheunicorn.html
+++ b/hornoftheunicorn.html
@@ -9,7 +9,7 @@ a {
   white-space: pre;
 }
 </style>
-<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
 <script type="text/javascript">
 (function($) {
 
