--- a/fif-testbed.html
+++ b/fif-testbed.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>testing</title></head>
 <body>
-<p style="width:100%;background-color:lightblue;height:500px">this is page</p>
+<p id="container" style="width:100%;background-color:lightblue;height:500px">this is page</p>
 <script>
 (function() {
   var url = 'http://localhost:3000/headerfooter/amptalk';
