refs #3267 - 16: header styles "90%" done

--- a/fif-testbed.html
+++ b/fif-testbed.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>testing</title></head>
-<body>
-<p id="container" style="width:100%;background-color:lightblue;height:500px">this is page</p>
+<body style="margin:0;padding:0">
+<p id="container" style="width:90%;margin:0 auto;background-color:lightblue;height:500px">this is page</p>
 <script>
 (function() {
   var url = 'http://localhost:3000/headerfooter/amptalk';
