--- a/fif-testbed.html
+++ b/fif-testbed.html
@@ -1,5 +1,7 @@
 <html>
-<head><title>testing</title></head>
+<head><title>testing</title>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+</head>
 <body style="margin:0;padding:0">
 <p id="container" style="width:90%;margin:0 auto;background-color:lightblue;height:500px">this is page</p>
 <script>
